# thymos

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.sccache  Makefile  README.md  SCCACHE_SETUP.md  docker-compose.multi-agent.yml  docker-compose.sccache.yml  docker-sccache-build.sh  rustfmt.toml
.cargo/: config.toml
docs/: GETTING_STARTED.md
docs/design/: AGENT_FRAMEWORK_DESIGN.md  AGENT_PERFORMANCE_METRICS.md  CONTEXT_MANAGER.md  GIT_STYLE_MEMORY_VERSIONING.md  LLM_NATIVE_AGENT_DESIGN.md  NAMED_MEMORY_SCOPES.md  PUBSUB_ABSTRACTION_DESIGN.md  README.md  SUBAGENT_API.md  SUPERVISOR_VERSIONING_INTEGRATION.md
thymos-cli/: Cargo.toml
thymos-cli/src/: main.rs
thymos-core/: Cargo.toml  build.rs
thymos-core/examples/: alias_resolution.rs  batteries_included.rs  concept_extraction.rs  concept_promotion.rs  consolidation.rs  hybrid_mode.rs  memory_lifecycle.rs  pubsub_local.rs  server_mode.rs  simple_agent.rs  test_server_backend.rs
thymos-core/examples/multi_agent/: README.md  analyzer.rs  coordinator.rs  main.rs  mod.rs  researcher.rs
thymos-core/examples/research_lab/: README.md  agents.rs  main.rs  mod.rs  tools.rs
thymos-core/examples/zera_npc/: README.md  concepts.rs  game_context.rs  main.rs  mod.rs  npc.rs  personality.rs  relevance.rs
thymos-core/src/: agent.rs  config.rs  error.rs  events.rs  lib.rs  lifecycle.rs
thymos-core/src/concepts/: alias.rs  alias_extractor.rs  basic_extractor.rs  config.rs  llm_extractor.rs  mod.rs  promotion.rs  tier.rs  traits.rs  types.rs
thymos-core/src/consolidation/: config.rs  engine.rs  insights.rs  mod.rs
thymos-core/src/context/: config.rs  manager.rs  mod.rs  quality.rs
thymos-core/src/conversation/: history.rs  mod.rs  session.rs  truncation.rs
thymos-core/src/embeddings/: factory.rs  mod.rs
thymos-core/src/embeddings/providers/: local.rs  mod.rs
thymos-core/src/eval/: fixture.rs  harness.rs  mod.rs  stub.rs  tests.rs
thymos-core/src/integration/: actor.rs  agent_core.rs  config.rs  events.rs  executor.rs  memory_provider.rs  mod.rs  tool_adapter.rs
thymos-core/src/llm/: circuit_breaker.rs  factory.rs  mod.rs  retry.rs
thymos-core/src/llm/providers/: anthropic.rs  groq.rs  mod.rs  ollama.rs  openai.rs
thymos-core/src/mcp/: mod.rs  protocol.rs  resources.rs  server.rs  transport.rs
thymos-core/src/memory/: backend.rs  hybrid.rs  inmemory.rs  mod.rs  routing.rs  scope.rs  server.rs
thymos-core/src/memory/versioning/: checkout.rs  commit.rs  merge.rs  mod.rs  repository.rs  subagent.rs  worktree.rs
thymos-core/src/metrics/: collector.rs  cost.rs  metrics.rs  mod.rs  resource.rs  storage.rs  tests.rs
thymos-core/src/parsing/: json.rs  markdown.rs  mod.rs  parser.rs  react.rs
thymos-core/src/patterns/: bisect.rs  consensus.rs  evaluator.rs  mod.rs  parallel_isolated.rs  speculative.rs
thymos-core/src/pubsub/: builder.rs  distributed.rs  error.rs  hybrid.rs  local.rs  message.rs  mod.rs  traits.rs
thymos-core/src/replay/: capture.rs  mod.rs  record.rs  tests.rs
thymos-core/src/skills/: anthropic.rs  builtin.rs  mod.rs  skill.rs
thymos-core/src/tools/: capability.rs  mod.rs  registry.rs  result.rs  runtime.rs  tests.rs  tool.rs
thymos-core/src/tracing/: aggregator.rs  collector.rs  export.rs  mod.rs  sampling.rs
thymos-core/src/workflow/: aggregator.rs  chain.rs  classifier.rs  evaluator_optimizer.rs  execution.rs  gate.rs  mod.rs  orchestrator.rs  parallel.rs  planner.rs  router.rs  step.rs
thymos-core/tests/: hybrid_tests.rs  integration_tests.rs  pubsub_local_tests.rs
thymos-go/: Cargo.toml  KNOWN_ISSUES.md  README.md  build.rs  build.sh  go.work  run_example.sh
thymos-go/go/: go.mod  thymos.go
thymos-go/go/example/: go.mod  main.go
thymos-go/include/: thymos.h
thymos-go/src/: lib.rs
thymos-python/: .gitignore  Cargo.toml  KNOWN_ISSUES.md  README.md  pyproject.toml  run_example.sh
thymos-python/examples/: basic_example.py
thymos-python/src/: lib.rs
thymos-python/thymos/: __init__.py
thymos-supervisor/: Cargo.toml  README.md
thymos-supervisor/examples/: cost_optimization.rs  multi_tenant.rs  versioning_supervisor.rs
thymos-supervisor/src/: error.rs  lib.rs  lifecycle.rs  process.rs  supervisor.rs
thymos-supervisor/src/versioning/: decision.rs  mod.rs  supervisor.rs  tests.rs
thymos-wasm/: Cargo.toml  KNOWN_ISSUES.md  README.md  build.sh
thymos-wasm/examples/: package-lock.json  package.json  run_test.sh  test_inmemory.mjs  test_server.mjs
thymos-wasm/examples/thymos-js/: thymos_wasm.core.wasm  thymos_wasm.core3.wasm  thymos_wasm.core4.wasm  thymos_wasm.d.ts  thymos_wasm.js
thymos-wasm/examples/thymos-js/interfaces/: thymos-agent-agent.d.ts  thymos-agent-memory.d.ts  thymos-agent-storage.d.ts  thymos-agent-types.d.ts  wasi-cli-environment.d.ts  wasi-cli-exit.d.ts  wasi-cli-stderr.d.ts  wasi-cli-stdin.d.ts  wasi-cli-stdout.d.ts  wasi-clocks-wall-clock.d.ts  wasi-filesystem-preopens.d.ts  wasi-filesystem-types.d.ts  wasi-http-types.d.ts  wasi-io-error.d.ts  wasi-io-poll.d.ts  wasi-io-streams.d.ts  wasi-random-random.d.ts
thymos-wasm/src/: bindings.rs  lib.rs
thymos-wasm/wit/: world.wit
