[package]
name = "thymos-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line tools for Thymos agent framework"

[[bin]]
name = "thymos"
path = "src/main.rs"

[dependencies]
thymos-core = { path = "../thymos-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }



