[package]
name = "thymos-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Python bindings for Thymos agent framework"
homepage = "https://github.com/blakebarnett/thymos"
keywords = ["agent", "ai", "memory", "python", "bindings"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "thymos"
crate-type = ["cdylib", "rlib"]

[dependencies]
thymos-core = { path = "../thymos-core", default-features = false, features = ["python-bindings"] }
locai = { workspace = true }
pyo3 = { version = "0.22", features = ["abi3-py38", "auto-initialize", "extension-module"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.20"

# Enable disable_initial_exec_tls to fix TLS allocation issues in Python extensions
# This allows jemalloc to be dynamically loaded after program startup
tikv-jemalloc-sys = { version = "0.6", features = ["disable_initial_exec_tls"] }

[build-dependencies]
pyo3-build-config = "0.22"

