[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "thymos"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Python bindings for Thymos agent framework"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }

[project.urls]
Homepage = "https://github.com/blakebarnett/thymos"
Documentation = "https://github.com/blakebarnett/thymos"

[tool.maturin]
features = []
module-name = "thymos"
compatibility = "linux"
# Use debug builds for faster compilation during development
# Set to true for release builds (slower but optimized)
release = false

